Lab_reports/Lab4/prelab/mixed_alpha.txt
Script started on 2024-10-30 10:05:22-05:00 [TERM="xterm-256color" TTY="/dev/pts/0" COLUMNS="120" LINES="30"]
[?2004h]0;plewis@MSI: ~/Gradlab/Lab_reports/Lab4/prelab[01;32mplewis@MSI[00m:[01;34m~/Gradlab/Lab_reports/Lab4/prelab[00m$ exitwxitrootexitroot
[?2004l   ------------------------------------------------------------------
  | Welcome to ROOT 6.30/08                        https://root.cern |
  | (c) 1995-2024, The ROOT Team; conception: R. Brun, F. Rademakers |
  | Built for linuxx8664gcc on Jul 14 2024, 22:53:16                 |
  | From tags/v6-30-08@v6-30-08                                      |
  | With c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0                   |
  | Try '.help'/'.?', '.demo', '.license', '.credits', '.quit'/'.q'  |
   ------------------------------------------------------------------

[0mroot [0] .q[D[DCalculateDetectedAlphasMixture[0m[38;5;83m[1m()
[0m[1minput_line_9:2:3: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'CalculateDetectedAlphasMixture'[0m
 (CalculateDetectedAlphasMixture())
[0;1;32m  ^
[0mError in <HandleInterpreterException>: Error evaluating expression (CalculateDetectedAlphasMixture())
Execution of your code was aborted.
[0mroot [1] CalculateDetectedAlphasMixture[0m[38;5;83m[1m()[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[0m.q[K[D[DCalculateDetectedAlphasMixture[0m[38;5;83m[1m()[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[0m.q[K[D[DCalculateDetectedAlphasMixture[0m[38;5;83m[1m()[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[0m.L mixed_alpha.C [K
[0m[0mroot [2] .L mixed_alpha.C [D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[DCalculateDetectedAlphasMixture[0m[38;5;83m[1m()
[0mDifferential cross-section at 60 degrees (mb/sr):
  Gold: 25561.8 mb/sr
  Silver: 9046.51 mb/sr
  Copper: 3443.03 mb/sr
Number of alphas detected: 4.13197e-16
[0mroot [3] .q
[0m[?2004h]0;plewis@MSI: ~/Gradlab/Lab_reports/Lab4/prelab[01;32mplewis@MSI[00m:[01;34m~/Gradlab/Lab_reports/Lab4/prelab[00m$ exit
[?2004lexit

Script done on 2024-10-30 10:05:41-05:00 [COMMAND_EXIT_CODE="0"]
